# cppbdm

./: README.md  bdm.py  pyproject.toml  scons_tools.py
artifacts/: boost-1.43.py  boost-1.46.1.py  boost-1.52.py  boost-1.53.py  python-2.7.3.py
