[project]
name = "cppbdm"
version = "0.1.0"
description = "A prototype tool for C++ dependency management"
readme = "README.md"
authors = [
    {name = "Dmitri Babaev", email = "dmitri.babaev@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
]

[dependency-groups]
dev = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
bdm = "bdm:main"
